--- a/CHANGES
+++ b/CHANGES
@@ -20,10 +20,12 @@
   (same as gdb). Use "info break" for a list of breakpoints.
 - INCOMPATIBLE CHANGE: "script" command removed. Use "source" command instead
   (same as gdb).
-- Run .rdebugrc on Debugger.start. Look for this in the current directory and
+- Run .rdebugrc on Debugger.start. Look for a file in the current directory and
   run that instead the one in $HOME if that exists. Again, inspired and compatible
   with gdb.
 - Ruby 1.9 compatible
+- leaving irb shows position same as entering debugger; "list" position
+  is also cleared when leaving irb
 
 0.9.3
 - Fixed if..elsif..end stepping.
