--- a/doc/ruby-debug.texi
+++ b/doc/ruby-debug.texi
@@ -1285,7 +1285,45 @@ See also the @code{methods}.
 @kindex irb 
 @item irb
 Run a Ruby @code{irb} session with the bindings environment set to the state
-you are in the program.
+you are in the program. 
+
+When you leave irb and go back to the debugger command prompt we show
+again the file, line and text position of the program in the same way
+as when entered the debugger. If you issue a @command{list} without
+location information, the default location used is the current line
+rather than the position may have gotten updated via a prior
+@command{list} command.
+@smallexample
+triangle.rb:4
+def triangle(n)
+(rdb:1) @b{list}
+[-1, 8] in /home/rocky/ruby/triangle.rb
+   1  #!/usr/bin/env ruby
+   2  # Compute the n'th triangle number - the hard way
+   3  # triangle(n) == (n * (n+1)) / 2
+=> 4  def triangle(n)
+   5    tri = 0
+   6    0.upto(n) do |i|
+   7      tri += i
+   8    end
+@b{irb}
+>> @b{(0..6).inject@{|sum, i| sum +=i@}}
+=> 21
+>> @b{exit}
+triangle.rb:4
+def triangle(n)
+(rdb:1) @b{list # Note we get the same line range as before going into irb}
+[-1, 8] in /home/rocky/ruby/triangle.rb
+   1  #!/usr/bin/env ruby
+   2  # Compute the n'th triangle number - the hard way
+   3  # triangle(n) == (n * (n+1)) / 2
+=> 4  def triangle(n)
+   5    tri = 0
+   6    0.upto(n) do |i|
+   7      tri += i
+   8    end
+@end smallexample
+
 @end table
 
 @node PrintVars
@@ -1319,11 +1357,18 @@ this is the same as running @code{ps object.methods} on @var{class-or-module}.
 @node List
 @section Examining Program Source Files (@samp{list})
 
+@cindex current line
 @value{DBG} can print parts of your script's source.  When your script
-stops, @value{DBG} spontaneously prints the line where it stopped.
-Likewise, when you select a stack frame (@pxref{Selection})
-@value{DBG} prints the line where execution in that frame has stopped.
-You can print other portions of source files by explicit command.
+stops, @value{DBG} spontaneously prints the line where it stopped and
+the text of that line. Likewise, when you select a stack frame
+(@pxref{Selection}) @value{DBG} prints the line where execution in
+that frame has stopped.  Implicitly there is a default line
+location. Each time a list command is run that implicit location is
+updated, so that running several list commands in succession shows a
+contiguous block of program text.
+
+You can print other portions of source files by giving an explicit
+position as a parameter to the list command.
 
 If you use @value{DBG} through its Emacs interface, you may prefer to
 use Emacs facilities to view source; @pxref{GNU Emacs}.
@@ -1392,6 +1437,10 @@ When your program stops, @DBG{} automatically selects the
 currently executing frame and describes it briefly, similar to the
 @code{frame} command.
 
+After switching frames, when you issue a @code{list} command without
+any position information, the position used is location in the frame
+that you just switched between, rather than a location that got
+updated via a prior @code{list} command.
 
 @menu
 * Frames::                      Stack frames
